--- a/src/components/Panel/Panel.css
+++ b/src/components/Panel/Panel.css
@@ -11,3 +11,74 @@
   padding: 3em 2em;
   overflow-y: hidden;
 }
+
+.panel form {
+  margin-bottom: 3em;
+}
+
+.submit {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 1.5em;
+  margin: 0;
+  border: none;
+  outline: none;
+  background: #fa6d1bac;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1.2rem;
+  transition: 0.4s;
+}
+
+.submit:hover {
+  background: #ffffff82 !important;
+  color: #000;
+}
+
+.search {
+  background: none;
+  border: none;
+  border-bottom: 1px #ccc solid;
+  padding: 0 1em 0.5em 0;
+  width: 80%;
+  color: #fff;
+  font-size: 1.1rem;
+}
+
+.search:focus {
+  outline: none;
+}
+
+.search::placeholder {
+  color: #ccc;
+}
+
+.panel ul {
+  padding: 0 0 1em 0;
+  margin: 2em 0;
+  border-bottom: 1px #ccc solid;
+}
+.panel ul li {
+  color: #ccc;
+  margin: 2.5em 0;
+}
+
+.panel ul h4 {
+  margin: 3em 0;
+}
+
+.city {
+  display: block;
+  cursor: pointer;
+}
+
+.city:hover {
+  color: #fff;
+}
+
+.details li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
