--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,8 @@
 .container {
+  width: 100%;
+  height: 100%;
   display: flex;
+  flex-direction: column;
   background-image: url(../../public/assets/images/day/cloudy.jpg);
   background-position: center; /*圖片中心置中*/
   background-repeat: no-repeat;
