--- a/src/components/CityInfo/CityInfo.css
+++ b/src/components/CityInfo/CityInfo.css
@@ -55,3 +55,49 @@
   margin: 0 1em;
   align-self: flex-start; /* Aligns the condition-text with city-time */
 }
+
+@media (max-width: 1100px) {
+  .weather-condition {
+    margin-left: -5px;
+  }
+  .city-detail {
+    margin-left: -100px;
+  }
+  .city-name {
+    font-size: 2rem;
+    margin-bottom: 0.2em;
+  }
+  .weather-icon {
+    transform: scale(0.8);
+  }
+  .condition-text {
+    margin-top: -20px;
+    font-size: 0.75rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .city-info {
+    top: -39rem;
+    left: 18rem;
+  }
+  .city-detail {
+    margin-left: -120px;
+    margin-bottom: -15px;
+  }
+  .city-name {
+    font-size: 2.5rem;
+    margin-bottom: 0.2em;
+  }
+  .weather-condition {
+    margin-bottom: -1rem;
+  }
+  .weather-icon {
+    margin-left: 5px;
+    transform: scale(0.8);
+  }
+  .condition-text {
+    margin-top: -10px;
+    font-size: 0.8rem;
+  }
+}
