--- a/src/components/StyleUpdater/StyleUpdater.css
+++ b/src/components/StyleUpdater/StyleUpdater.css
@@ -10,5 +10,5 @@
 
 .container {
   transition: background-image 1s ease-in-out;
-  background-color: black; /* 黑屏效果 */
+  background-color: black; // Black screen effect
 }
